# no-engine-game

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: ci.yml
assets/: config.json
assets/ai/: easy.json  hard.json  normal.json
assets/characters/: ballerina.json  breaker.json
docs/: build-plan.md  design.md  research.md  technical.md
replays/: script_combo_cap.txt  script_example.txt  script_steal.txt
src/: main.cpp
src/audio/: audio.cpp  audio.h
src/data/: loader.cpp  loader.h  settings.cpp  settings.h
src/platform/: app.cpp  app.h  input.cpp  input.h
src/render/: draw.cpp  draw.h  effects.cpp  effects.h  font5x7.cpp  font5x7.h  sprites.cpp  sprites.h
src/shell/: shell.cpp  shell.h
src/sim/: ai.cpp  ai.h  beatclock.h  chardata.cpp  chardata.h  clash.cpp  clash.h  combo.cpp  combo.h  fighter.cpp  fighter.h  fixed.h  input_commit.cpp  input_commit.h  rng.h  simulation.cpp  simulation.h  types.h
tests/: test_ai.cpp  test_beatclock.cpp  test_clash.cpp  test_combo.cpp  test_fixed.cpp  test_sim.cpp
tools/: headless.cpp
